--- a/vue/component3.html
+++ b/vue/component3.html
@@ -32,7 +32,8 @@
 </div>
 
 <script src="js/vue.js"></script>
-<script src="https://cdn.rawgit.com/chrisvfritz/5f0a639590d6e648933416f90ba7ae4e/raw/974aa47f8f9c5361c5233bd56be37db8ed765a09/currency-validator.js"></script>
+<!--<script src="https://gist.github.com/chrisvfritz/5f0a639590d6e648933416f90ba7ae4e.js"></script>-->
+<script src="js/currency-validator.js"></script>
 <script>
 
     Vue.component('currency-input', {
